# mcp_rust

./: CLAUDE.md  Cargo.toml  README.md  SUMMARY.md  nextest.toml  run_integration_tests.sh
.config/: nextest.toml
config/: default.toml
examples/: basic_usage.md
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/adapter/input/: mod.rs
src/adapter/input/api/: handlers.rs  mod.rs  models.rs  router.rs
src/adapter/output/: memory_context_repository.rs  mod.rs  simple_embedding_service.rs
src/application/: context_management_service.rs  context_search_service.rs  mod.rs
src/config/: mod.rs
src/domain/: error.rs  mod.rs  model.rs  service.rs
src/ports/: mod.rs
src/ports/input/: context_management_port.rs  context_search_port.rs  mod.rs
src/ports/output/: context_repository_port.rs  embedding_port.rs  mod.rs
src/tests/: context_management.rs  mod.rs
tests/: integration_tests.rs
