[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "Implementation of Anthropic's Model Context Protocol in Rust"
authors = ["Claude <claude@anthropic.com>"]

[[bin]]
name = "mcp-server"
path = "src/bin/server.rs"

[[bin]]
name = "mcp-client"
path = "src/bin/client.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
config = "0.14"
regex = "1.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
test-case = "3.3"
rand = "0.8"
serde_json = "1.0"
